# docs/swagger.yaml
@@ -64,7 +64,7 @@ definitions:
         maxLength: 200
         type: string
     type: object
-  model.PageResult:
+  utils.PageResult:
     properties:
       list:
         description: 数据列表，通常是切片，如 []Book
@@ -238,7 +238,7 @@ paths:
             - properties:
                 data:
                   allOf:
-                  - $ref: '#/definitions/model.PageResult'
+                  - $ref: '#/definitions/utils.PageResult'
                   - properties:
                       list:
                         items:
